--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "test"
   },
     "dependencies": {
-        "lodash": "~0.7.0"
+        "lodash": "~0.7.0",
+        "pg":""
     },
     "devDependencies": {
         "should": "",
