--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
     "dependencies": {
         "lodash": "~0.7.0",
-        "pg":""
+        "pg":"",
+        "request":"",
+"topojson":""
     },
     "devDependencies": {
         "should": "",
