fixing things to get them to run
readfile will bail if there is no features

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "lodash": "~0.7.0",
         "pg":"",
         "request":"",
-"topojson":""
+        "topojson":"",
+        "optimist":""
     },
     "devDependencies": {
         "should": "",
