stripeed out request in favor of superagent.
haven't tested yet, but at least I have the code done

--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
     "dependencies": {
-        "lodash": "~0.7.0",
+        "lodash": "",
         "pg":"",
+        "superagent":"",
         "request":"",
         "topojson":"",
         "optimist":""
