--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "superagent":"",
         "request":"",
         "topojson":"",
-        "optimist":""
+        "optimist":"",
+        "calvad_compute_aadt":"git://github.com/jmarca/calvad_compute_aadt.git"
     },
     "devDependencies": {
         "should": "",
