--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "request":"",
         "topojson":"",
         "optimist":"",
-        "calvad_compute_aadt":"git://github.com/jmarca/calvad_compute_aadt.git"
+        "calvad_compute_aadt":"git://github.com/jmarca/calvad_compute_aadt.git",
+        "couchdb_bulkdoc_saver":"git://github.com/jmarca/couchdb_bulkdoc_saver.git"
     },
     "devDependencies": {
         "should": "",
