--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
         "request":"",
         "topojson":"",
         "optimist":"",
+        "async": "",
+        "calvad_compute_aadt":"git://github.com/jmarca/calvad_areasa.git",
         "calvad_compute_aadt":"git://github.com/jmarca/calvad_compute_aadt.git",
         "couchdb_bulkdoc_saver":"git://github.com/jmarca/couchdb_bulkdoc_saver.git"
     },
     "devDependencies": {
-        "should": "",
-        "async": ""
+        "should": ""
     },
   "scripts": {
     "test": "mocha"
