it runs.  doesn't work of course, but fires up R
minor edits to calling script to set the cwd properly.  also added git
ignore to ignore component stuff, and corrected the ridiculous prior
commit of package.json for calvad_areas

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "topojson":"",
         "optimist":"",
         "async": "",
-        "calvad_compute_aadt":"git://github.com/jmarca/calvad_areasa.git",
+        "calvad_areas":"git://github.com/jmarca/calvad_areas.git",
         "calvad_compute_aadt":"git://github.com/jmarca/calvad_compute_aadt.git",
         "couchdb_bulkdoc_saver":"git://github.com/jmarca/couchdb_bulkdoc_saver.git"
     },
