moved over couchapp stuff from grid_couchdb
made more sense to keep it all together.

deleted:    couchdb/cellmembership.json
deleted:    couchdb/morecellmembership.json
new file:   couchdb/views/grid_to_area/.gitignore
new file:   couchdb/views/grid_to_area/Gruntfile.js
new file:   couchdb/views/grid_to_area/app.js
renamed:    couchdb/views/cellmembership.js -> couchdb/views/grid_to_area/lib/cellmembership.json
new file:   couchdb/views/grid_to_area/lib/dump_airbasin_membership.js
new file:   couchdb/views/grid_to_area/lib/dump_airdistrict_membership.js
new file:   couchdb/views/grid_to_area/lib/dump_county_membership.js
new file:   couchdb/views/grid_to_area/lib/grid.sql
new file:   couchdb/views/grid_to_area/lib/mini_cell_membership.json
new file:   couchdb/views/grid_to_area/package.json
modified:   package.json

--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "directories": {
     "test": "test"
   },
-    "dependencies": {
-        "lodash": "",
-        "pg":"",
-        "superagent":"",
-        "request":"",
-        "topojson":"",
-        "optimist":"",
-        "async": "",
-        "calvad_areas":"git://github.com/jmarca/calvad_areas.git",
-        "calvad_compute_aadt":"git://github.com/jmarca/calvad_compute_aadt.git",
-        "couchdb_bulkdoc_saver":"git://github.com/jmarca/couchdb_bulkdoc_saver.git"
-    },
-    "devDependencies": {
-        "should": ""
-    },
+  "dependencies": {
+    "lodash": "",
+    "pg": "",
+    "superagent": "",
+    "request": "",
+    "topojson": "",
+    "optimist": "",
+    "async": "",
+    "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
+    "calvad_compute_aadt": "git://github.com/jmarca/calvad_compute_aadt.git",
+    "couchdb_bulkdoc_saver": "git://github.com/jmarca/couchdb_bulkdoc_saver.git"
+  },
+  "devDependencies": {
+    "should": "",
+    "grunt-couchapp": "~0.2.0",
+    "couchapp": "~0.10.0"
+  },
   "scripts": {
     "test": "mocha"
   },
