--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
-node_modules/
-Rwork/.RData
+**/node_modules/
+**/.RData
 Rwork/.Rhistory
 Rwork/Rtmp**
 Rwork/*.pdf
-components/
+**/components/
 /test.config.json
+/config.json
+*~
