--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "optimist": "",
     "async": "",
     "calvad_rscripts": "jmarca/calvad_rscripts",
-    "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
-    "calvad_compute_aadt": "git://github.com/jmarca/calvad_compute_aadt.git",
-    "couchdb_bulkdoc_saver": "git://github.com/jmarca/couchdb_bulkdoc_saver.git",
+    "calvad_areas": "jmarca/calvad_areas",
+    "calvad_compute_aadt": "jmarca/calvad_compute_aadt",
+    "couchdb_bulkdoc_saver": "jmarca/couchdb_bulkdoc_saver",
     "couch_check_state": "jmarca/couch_check_state",
     "config_okay": "",
     "configr": "jmarca/configr",
