--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "topojson": "",
     "optimist": "",
     "async": "",
-    "calvad_rscripts": "jmarca/calvad_rscripts",
+    "couch_check_state": "jmarca/couch_check_state",
+    "config_okay": "",
     "calvad_areas": "jmarca/calvad_areas",
     "calvad_compute_aadt": "jmarca/calvad_compute_aadt",
     "couchdb_bulkdoc_saver": "jmarca/couchdb_bulkdoc_saver",
-    "couch_check_state": "jmarca/couch_check_state",
-    "config_okay": "",
+    "calvad_rscripts": "jmarca/calvad_rscripts",
+    "rstats_couch_utils": "jmarca/rstats_couch_utils",
     "configr": "jmarca/configr",
     "queue-async": "",
     "rcouchutils": "jmarca/rstats_couch_utils"
