change to newer github package locations

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "topojson": "",
     "optimist": "",
     "async": "",
-    "calvad_areas": "git://github.com/jmarca/calvad_areas.git",
-    "calvad_compute_aadt": "git://github.com/jmarca/calvad_compute_aadt.git",
-    "couchdb_bulkdoc_saver": "git://github.com/jmarca/couchdb_bulkdoc_saver.git",
+    "calvad_areas": "jmarca/calvad_areas",
+    "calvad_compute_aadt": "jmarca/calvad_compute_aadt",
+    "couchdb_bulkdoc_saver": "jmarca/couchdb_bulkdoc_saver",
     "calvad_rscripts": "jmarca/calvad_rscripts",
     "rstats_couch_utils": "jmarca/rstats_couch_utils",
     "configr": "jmarca/configr",
