--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,12 @@
-Package: griddata
-Title: do stuff with grid data
-Version: 0.0.1
-Authors@R: person("James", "Marca", email = "james@activimetrics.com", role = c("aut", "cre"))
-Description: This package is a combination of JavaScript and R code that processes grid data.  It will load up the highway hourly volumes in grids and then interpolate the hourly variations from average annual daily traffic for surrounding grid cells.
+Package: grid.data
+Title: Process CalVAD 4km grid data
+Version: 1.0.1
+Authors@R: person("James", "Marca", email = "jmarca@translab.its.uci.edu", role = c("aut", "cre"))
+Description: This package will create the hourly fractional variations
+    for each grid cell with data in California.  The grid is defined
+    by the ARB 4km grid.  The hourly fraction should be multiplied by
+    the average annual daily traffic for the grid cell to get the
+    hourly expected traffic volumes.
 Depends: R (>= 3.2.0)
 License: GPL-2
 LazyData: true
@@ -10,4 +14,9 @@ Imports: cluster,
     doMC,
     spTimer,
     rcouchutils
+    RPostgreSQL,
+    rjson,
+    dplyr,
+    RJSONIO,
+    RCurl
 Suggests: testthat
