--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ LazyData: true
 Imports: cluster,
     doMC,
     spTimer,
-    rcouchutils
+    rcouchutils,
     RPostgreSQL,
     rjson,
     dplyr,
