--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,12 @@ Description: This package will create the hourly fractional variations
     by the ARB 4km grid.  The hourly fraction should be multiplied by
     the average annual daily traffic for the grid cell to get the
     hourly expected traffic volumes.
-Depends: R (>= 3.2.0)
+Depends:
+    R (>= 3.2.0)
 License: GPL-2
 LazyData: true
-Imports: cluster,
+Imports:
+    cluster,
     doMC,
     spTimer,
     rcouchutils,
@@ -18,6 +20,8 @@ Imports: cluster,
     rjson,
     dplyr,
     RJSONIO,
-    RCurl,
+    RCurl
+Suggests:
+    testthat,
     pryr
-Suggests: testthat
+RoxygenNote: 5.0.0
