--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ LazyData: true
 Imports: cluster,
     doMC,
     spTimer,
+    rcouchutils,
     RPostgreSQL,
     rjson,
     dplyr,
@@ -20,3 +21,4 @@ Imports: cluster,
     RCurl,
     pryr
 Suggests: testthat
+RoxygenNote: 5.0.0
