--- a/package.json
+++ b/package.json
@@ -25,10 +25,21 @@
     "topojson": ""
   },
   "devDependencies": {
+    "babel-eslint": "^5.0.0",
+    "eslint": "^2.3.0",
+    "eslint-plugin-babel": "^3.1.0",
+    "estraverse-fb": "^1.3.1",
+    "ink-docstrap": "^1.1.4",
+    "istanbul": "^0.4.2",
+    "jsdoc": "^3.4.0",
+    "mocha": "",
     "should": ""
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha ./test/test_* -R list --timeout 240000",
+    "lint": "eslint ./test/test_* ",
+    "test-travis": "istanbul cover ./node_modules/.bin/_mocha -- -R spec --check-leaks --timeout 50000 ./test/test_*",
+    "jsdoc": "jsdoc -c .jsdoc.json"
   },
   "repository": {
     "type": "git",
