--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "topojson": ""
   },
   "devDependencies": {
+    "babel-eslint": "^5.0.0",
+    "eslint": "^2.3.0",
+    "eslint-plugin-babel": "^3.1.0",
+    "estraverse-fb": "^1.3.1",
     "should": ""
   },
   "scripts": {
