--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ink-docstrap": "^1.1.4",
     "istanbul": "^0.4.2",
     "jsdoc": "^3.4.0",
-    "mocha": "",
+    "mocha": "^2.4.5",
     "should": ""
   },
   "scripts": {
