runtime fixes, tweaks---for RAM, speed

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "configr": "jmarca/configr",
     "couch_check_state": "jmarca/couch_check_state",
     "couchdb_bulkdoc_saver": "jmarca/couchdb_bulkdoc_saver",
+    "d3-queue": "",
     "lodash": "",
+    "minimist": "^1.2.0",
     "optimist": "",
     "pg": "",
-    "d3-queue": "",
     "request": "",
     "rstats_couch_utils": "jmarca/rstats_couch_utils",
     "rstats_remote_files": "jmarca/rstats_remote_files",
