--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "couch_check_state": "jmarca/couch_check_state",
     "couchdb_bulkdoc_saver": "jmarca/couchdb_bulkdoc_saver",
     "d3-queue": "",
+    "glob": "^7.0.3",
     "lodash": "",
     "minimist": "^1.2.0",
     "optimist": "",
@@ -26,10 +27,7 @@
     "topojson": ""
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0",
-    "eslint": "^2.3.0",
-    "eslint-plugin-babel": "^3.1.0",
-    "estraverse-fb": "^1.3.1",
+    "eslint": "^2.10.2",
     "ink-docstrap": "^1.1.4",
     "istanbul": "^0.4.2",
     "jsdoc": "^3.4.0",
